truffle/src/com.oracle.truffle.sl.test/src/tests/error/TypeError05.sl
function main() {
  f = 1 < 2;
  f();  
}  
